--- a/Assets/Data/App/StaticContentDemo/Scripts/Startup.htm
+++ b/Assets/Data/App/StaticContentDemo/Scripts/Startup.htm
@@ -1,6 +1,5 @@
-var fsm = require("Common/StateMachine")();
-
-var booting = require("Booting")(fsm, "Booting");
+var fsm = require("Resources/Commons/StateMachine")();
+/*var booting = require("Booting")(fsm, "Booting");
 var updating = require("Updating")(fsm, "Updating");
 
 function enter() {
@@ -9,4 +8,4 @@ function enter() {
 
 function update() {
 	fsm.update();
-}
+}*/
