--- a/Assets/Resources/Common/StateMachine.htm
+++ b/Assets/Resources/Common/StateMachine.htm
@@ -28,18 +28,13 @@ module.exports = function() {
 						return;
 					}
 
-					log.debug(
-						"Changing state from {0} to {1}.",
-						current ? "null" : current.id,
-						state ? "null" : state.id);
-
-					if (null !== current) {
+					if (current) {
 						current.exit();
 					}
 
 					current = state;
 
-					if (null !== current) {
+					if (current) {
 						current.enter();
 					}
 
