--- a/Assets/Data/App/StaticContentDemo/Scripts/Startup/Final.htm
+++ b/Assets/Data/App/StaticContentDemo/Scripts/Startup/Final.htm
@@ -1,16 +1,14 @@
-//var appData = require("appData");
-
 module.exports = function(stateMachine, id) {
 
 	return {
 		id: id,
-		
+
 		enter: function() {
-		    log.debug("Updating...");
+		    log.debug("Final...");
 		},
 
 		update: function() {
-
+			
 		},
 
 		exit: function() {
