--- a/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
+++ b/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
@@ -1,3 +1,5 @@
+var events = require("events");
+
 module.exports = function(stateMachine, id) {
 
 	return {
@@ -5,6 +7,8 @@ module.exports = function(stateMachine, id) {
 
 		enter: function() {
 		    log.debug("Calibrating...");
+
+		    events.Publish(3010, "Tycho - Source");
 		},
 
 		update: function() {
