Mucking about in the Jint internals so I can prefix interop calls with an Engine parameter.
Stubbed out basic MessageRouterScriptingInterface.

--- a/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
+++ b/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
@@ -8,6 +8,10 @@ module.exports = function(stateMachine, id) {
 		enter: function() {
 		    log.debug("Calibrating...");
 
+		    events.Subscribe(3010, function(message) {
+		    	log.info("Receieved!");
+		    });
+		    
 		    events.Publish(3010, "Tycho - Source");
 		},
 
