--- a/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
+++ b/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
@@ -8,11 +8,13 @@ module.exports = function(stateMachine, id) {
 		enter: function() {
 		    log.debug("Calibrating...");
 
-		    events.Subscribe(3010, function(message) {
-		    	log.info("Receieved!");
+		    var unsubId = events.Subscribe(3010, function(message) {
+		    	log.info("Received!");
 		    });
-		    
+
 		    events.Publish(3010, "Tycho - Source");
+
+		    events.Unsubscribe(unsubId);
 		},
 
 		update: function() {
