--- a/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
+++ b/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
@@ -8,13 +8,8 @@ module.exports = function(stateMachine, id) {
 		enter: function() {
 		    log.debug("Calibrating...");
 
-		    var unsubId = events.Subscribe(3010, function(message) {
-		    	log.info("Received!");
-		    });
-
+		    // play tycho
 		    events.Publish(3010, "Tycho - Source");
-
-		    events.Unsubscribe(unsubId);
 		},
 
 		update: function() {
