--- a/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
+++ b/Assets/Data/App/StaticContentDemo/Scripts/Startup/Calibrating.htm
@@ -1,4 +1,5 @@
 var events = require("events");
+var widgets = require("widgets");
 
 module.exports = function(stateMachine, id) {
 
@@ -10,6 +11,9 @@ module.exports = function(stateMachine, id) {
 
 		    // play tycho
 		    events.Publish(3010, "Tycho - Source");
+
+		    // show widget
+		    
 		},
 
 		update: function() {
